minor spacing fix

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -236,8 +236,8 @@ pre {
   max-width: calc(#{$content-width} - (#{$spacing-unit}));
   margin-right: auto;
   margin-left: auto;
-  padding-right: $spacing-unit / 2;
-  padding-left: $spacing-unit / 2;
+  padding-right: $spacing-unit * 2;
+  padding-left: $spacing-unit * 2;
   @extend %clearfix;
 
   @media screen and (min-width: $on-large) {
