--- a/_sass/minima/_content.scss
+++ b/_sass/minima/_content.scss
@@ -8,14 +8,14 @@
     width: 24%;
     text-align: center;
     padding-left: $spacing-unit * 2;
-    padding-top: $spacing-unit * 2;
+    padding-top: $spacing-unit;
 }
 
 .bio-left {
     width: 76%;
     text-align: justify;
     padding-right: $spacing-unit * 2;
-    padding-top: $spacing-unit * 2;
+    padding-top: $spacing-unit;
 }
 
 img.bio-profile {
@@ -31,14 +31,13 @@ img.bio-profile {
 
     .bio-right {
         text-align: center;
-        padding: $spacing-unit * 2 $spacing-unit $spacing-unit $spacing-unit;
-        //padding: $spacing-unit;
+        padding: $spacing-unit 0;
         width: 100%;
     }
 
     .bio-left {
         text-align: justify;
-        padding: $spacing-unit;
+        padding: $spacing-unit 0;
         width: 100%;
     }
 
@@ -56,22 +55,12 @@ img.bio-profile {
 .pubcard {
     display: flex;
     flex-direction: row;
-}
-
-.pubcard .publeft,
-.pubcard .pubright,
-.pubcard .pubpre {
-    margin-right: 0%;
-    margin-left: 0%;
-    margin-top: $spacing-unit;
-    margin-bottom: $spacing-unit;
-    padding: $spacing-unit;
-    background-color: default;
+    padding: $spacing-unit * 2 0;
 }
 
 .pubcard .publeft {
     width: 30%;
-    padding: $spacing-unit;
+    padding-right: $spacing-unit;
     justify-items: center;
     justify-content: center;
     align-items: center;
@@ -79,6 +68,7 @@ img.bio-profile {
 }
 
 .pubcard .pubright {
+    padding-left: $spacing-unit;
     display: flex;
     flex-direction: column;
     width: 70%;
@@ -87,59 +77,35 @@ img.bio-profile {
     justify-content: center;
 }
 
-.pubcard .pubpre {
-    width: 100%;
-    text-align: left;
-}
-
 .pc-profile {
     width: 100%;
-    //border-radius: 10px 0 0 10px;
-    border-radius: $spacing-unit; // calc(#{$spacing-unit} / 2);
+    border-radius: $spacing-unit;
 }
 
 @media only screen and (max-width: $on-palm) {
     .pubcard {
         display: flex;
         flex-direction: column;
-        padding: 0px;
-        padding-bottom: $spacing-unit;
-        margin: calc(#{$spacing-unit} * 2); // $spacing-unit;
-        //box-shadow: 0 0 $spacing-unit rgba(0, 0, 0, 0.2);
-        //border-radius: 15px;
+        padding: $spacing-unit * 2 0;
     }
 
     .pubcard .publeft,
-    .pubcard .pubright,
-    .pubcard .pubpre {
+    .pubcard .pubright {
         width: 100%;
-        margin-right: 0%;
-        margin-left: 0%;
+        margin: 0%;
+        padding: 0%;
     }
 
     .pubcard .publeft {
         text-align: center;
-        margin: 0%;
-        padding: 0%;
-        //border-radius: 15px;
+        padding-bottom: $spacing-unit;
     }
 
     .pubcard .pubright {
         text-align: left;
         margin: 0%;
-        padding-left: 0px;
-        padding-right: 0px;
         padding-top: $spacing-unit;
-        padding-bottom: $spacing-unit;
         border-radius: 0px;
-    }
-
-    .pubcard .pubpre {
-        text-align: left;
-        margin-top: $spacing-unit;
-        margin-bottom: $spacing-unit;
-        padding: $spacing-unit;
-        //border-radius: 10px;
     }
 
     .pc-profile {
@@ -150,79 +116,18 @@ img.bio-profile {
 }
 
 // cards
-.awards,
-.industry,
-.teaching {
-    display: flex;
-    flex-wrap: wrap;
-    //overflow-x: scroll;
-    flex-direction: row;
+.awards {
 }
 
-.awards .awardcard,
-.industry .indcard,
-.teaching .classcard {
-    flex-basis: max-content;
-    text-align: center;
-    margin: calc(#{$spacing-unit} / 2);
+.awards .awardcard {
+    margin: $spacing-unit * 2 0;
     padding: $spacing-unit;
     border-radius: $spacing-unit;
     background-color: $pill-color;
     justify-items: center;
+    width: 100%;
 }
 
-.awards .awardcard {
-    min-width: calc(100% - (#{$spacing-unit}));
-    max-width: calc(100% - (#{$spacing-unit}));
-}
-
-.industry .indcard {
-    min-width: calc(50% - (#{$spacing-unit}));
-    max-width: calc(50% - (#{$spacing-unit}));
-}
-
-.teaching .classcard {
-    min-width: calc(50% - (#{$spacing-unit}));
-    max-width: calc(50% - (#{$spacing-unit}));
-}
-
-@media only screen and (max-width: $on-palm) {
-
-    .awards,
-    .industry,
-    .teaching {
-        display: flex;
-        flex-direction: row;
-        padding: $spacing-unit;
-    }
-
-    .awards .awardcard,
-    .industry .indcard,
-    .teaching .classcard {
-        text-align: center;
-        border-radius: $spacing-unit;
-        margin-left: 0px;
-        margin-right: 0px;
-        margin-top: calc(#{$spacing-unit} / 2);
-        margin-bottom: calc(#{$spacing-unit} / 2);
-        background-color: $pill-color;
-    }
-
-    .awards .awardcard {
-        min-width: 100%;
-        width: 100%;
-    }
-
-    .industry .indcard {
-        min-width: 100%;
-        width: 100%;
-    }
-
-    .teaching .classcard {
-        min-width: 100%;
-        width: 100%;
-    }
-}
 
 .awardname,
 .awarder {
@@ -232,64 +137,11 @@ img.bio-profile {
     margin: 0px;
 }
 
-.indemp,
-.indtitle,
-.tclassname,
-.tinstu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px;
-    font-weight: bold;
-}
-
-.ttime {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin: 0px;
-    min-height: 48px;
-    font-weight: bold;
-    color: $light-text-color;
-    margin: 0px;
-}
-
-
 .awarder {
     color: $light-text-color;
     font-weight: bold;
 }
 
-.indemp {
-    @include relative-font-size(1.25);
-    color: $text-color;
-    margin-top: calc(#{$spacing-unit});
-    margin-bottom: calc(#{$spacing-unit});
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.indtitle {
-    color: $light-text-color;
-    margin: 0px;
-}
-
-.tclassname {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: $spacing-unit;
-    margin-right: $spacing-unit;
-    min-height: 80px;
-}
-
-.tinstu {
-    display: flex;
-    font-weight: bold;
-    color: $light-text-color;
-    margin: 0px;
-    min-height: 50px;
-}
 
 hr.cardiv {
     height: 2px;
@@ -314,8 +166,6 @@ hr.pagediv {
     margin-bottom: $spacing-unit;
     padding: $spacing-unit;
 }
-
-
 
 a.footer_link {
     text-decoration: none;
