--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -32,7 +32,7 @@
 .site-nav {
   position: absolute;
   top: 9px;
-  right: $spacing-unit / 2;
+  right: $spacing-unit * 2;
   background-color: $background-color;
   border: 1px solid $border-color-01;
   border-radius: 5px;
@@ -127,7 +127,7 @@
  */
 .site-footer {
   border-top: 1px solid $border-color-01;
-  padding: $spacing-unit 0;
+  padding: $spacing-unit;
 }
 
 .footer-heading {
